--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -1,6 +1,29 @@
+@charset "UTF-8";
 body {
   background-color: #142030;
   color: #fff;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 2px solid #8f9bad;
+  transition: 0.6s;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -ms-transition: 0.6s;
+  -o-transition: 0.6s;
+}
+
+.sticky + .content {
+  padding-top: 102px;
+}
+
+nav {
+  background-color: #142030;
+  z-index: 15;
+  transition: 0.6s;
 }
 
 .logo {
@@ -25,6 +48,11 @@ body {
 }
 .linked .linked-item:hover {
   color: #dc3445;
+}
+@media only screen and (max-width: 600px) {
+  .linked {
+    display: none;
+  }
 }
 
 .navbar-custom {
@@ -62,10 +90,19 @@ body {
   transform: translateY(-50%);
   font-size: 30px;
   z-index: 10;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
+  border: 3px solid #8f9bad;
+  padding: 10px;
+  border-radius: 10px;
+}
+@media only screen and (max-width: 600px) {
+  .slick-arrow {
+    top: 60%;
+  }
+}
+
+.slick-arrow:hover {
+  background-color: #8f9bad;
+  color: #142030;
 }
 
 .pull-left {
@@ -84,33 +121,43 @@ body {
   /* more CSS */
 }
 
+.scale-zoom {
+  cursor: pointer;
+  transition: 0.6s;
+  width: 100%;
+}
+
+.scale-zoom:hover {
+  transform: scale(1.1);
+  transition: 0.6s;
+}
+
 .new-posts .new-item {
   position: relative;
   font-size: 14px;
   height: 540px;
+  width: 100%;
 }
-.new-posts .new-item .thumb {
+.new-posts .new-item .bg-image {
   position: absolute;
-  z-index: -1;
   top: 0;
   left: 0;
-  background-size: cover;
-  background-position: center center;
   height: 540px;
+  background-position: center center;
+  opacity: 0.4;
   width: 100%;
-  opacity: 0.2;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
 }
 .new-posts .new-item .content {
   position: absolute;
   top: 40%;
   left: 50%;
+  margin-top: 5px;
+  margin-bottom: 10px;
   transform: translateY(-50%);
   transform: translateX(-50%);
+}
+.new-posts .new-item .content .name {
+  margin-top: 10px;
 }
 .new-posts .new-item .content .name a {
   color: #fff;
@@ -121,6 +168,120 @@ body {
 }
 .new-posts .new-item .content .name a:hover {
   color: #dc3445;
+}
+@media only screen and (max-width: 1000px) {
+  .new-posts .new-item .content {
+    top: 40%;
+    width: 80%;
+    margin-top: 10px;
+  }
+  .new-posts .new-item .content .name a {
+    font-size: 24px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .new-posts .new-item .content {
+    width: 95%;
+    top: 30%;
+  }
+  .new-posts .new-item .content .name a {
+    font-size: 24px;
+    width: 95%;
+  }
+}
+
+.n-auth,
+.n-content {
+  color: #8f9bad;
+  font-size: 14px;
+}
+
+.n-img {
+  overflow: hidden;
+}
+
+.n-content {
+  overflow: hidden;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.n-name a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: none;
+}
+.n-name a:hover {
+  color: #dc3445;
+}
+
+.title-span::after {
+  display: block;
+  margin-left: 10px;
+  content: "͞";
+}
+
+.p-item {
+  font-size: 14px;
+  color: #8f9bad;
+}
+.p-item .p-img {
+  height: 200px;
+  background-position: center center;
+  overflow: hidden;
+}
+.p-item .p-author {
+  text-align: left;
+}
+.p-item a {
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #fff;
+}
+.p-item a:hover {
+  color: #dc3445;
+}
+.p-item .p-content {
+  overflow: hidden;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.p-list .l-img {
+  overflow: hidden;
+}
+.p-list .l-content .l-name {
+  overflow: hidden;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  width: 100%;
+  margin: 10px 0;
+}
+.p-list .l-content .l-name a {
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+}
+.p-list .l-content .l-name a:hover {
+  color: #dc3445;
+}
+.p-list .l-content .date {
+  font-size: 14px;
+  color: #8f9bad;
 }
 
 /*# sourceMappingURL=app.css.map */
