--- a/resources/scss/home.scss
+++ b/resources/scss/home.scss
@@ -4,9 +4,61 @@ $muted-color: #8f9bad;
 $color: #fff;
 $danger: #dc3445;
 
+// Screen size
+$phone: 600px;
+$tab-port: 800px;
+$tab-land: 1000px;
+$desktop: 1400px;
+
+@mixin phone {
+    @media only screen and (max-width: $phone) {
+        @content;
+    }
+}
+
+@mixin tab-port {
+    @media only screen and (max-width: $tab-port) {
+        @content;
+    }
+}
+
+@mixin tab-land {
+    @media only screen and (max-width: $tab-land) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media only screen and (max-width: $desktop) {
+        @content;
+    }
+}
+
 body {
     background-color: $background-color;
     color: $color;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    border-bottom: 2px solid #8f9bad;
+    transition: .6s;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
+}
+
+.sticky+.content {
+    padding-top: 102px;
+}
+
+nav {
+    background-color: $background-color;
+    z-index: 15;
+    transition: .6s;
 }
 
 // Header style
@@ -36,6 +88,10 @@ body {
 
     .linked-item:hover {
         color: $danger;
+    }
+
+    @include phone {
+        display: none;
     }
 }
 
@@ -75,10 +131,18 @@ body {
     transform: translateY(-50%);
     font-size: 30px;
     z-index: 10;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
+    border: 3px solid $muted-color;
+    padding: 10px;
+    border-radius: 10px;
+
+    @include phone {
+        top: 60%;
+    }
+}
+
+.slick-arrow:hover {
+    background-color: $muted-color;
+    color: $background-color;
 }
 
 .pull-left {
@@ -98,38 +162,48 @@ body {
     }
 }
 
+
+.scale-zoom {
+    cursor: pointer;
+    transition: .6s;
+    width: 100%;
+}
+
+.scale-zoom:hover {
+    transform: scale(1.1);
+    transition: .6s;
+}
+
 /// New post Section
 .new-posts {
     .new-item {
         position: relative;
         font-size: 14px;
         height: 540px;
+        width: 100%;
 
-        .thumb {
+        .bg-image {
             position: absolute;
-            z-index: -1;
             top: 0;
             left: 0;
-            background-size: cover;
-            background-position: center center;
             height: 540px;
+            background-position: center center;
+            opacity: .4;
             width: 100%;
-            opacity: .2;
-            border-radius: 15px;
-            -webkit-border-radius: 15px;
-            -moz-border-radius: 15px;
-            -ms-border-radius: 15px;
-            -o-border-radius: 15px;
         }
 
         .content {
             position: absolute;
             top: 40%;
             left: 50%;
+            margin-top: 5px;
+            margin-bottom: 10px;
             transform: translateY(-50%);
             transform: translateX(-50%);
 
             .name {
+                margin-top: 10px;
+
                 a {
                     color: $color;
                     font-weight: 700;
@@ -142,6 +216,136 @@ body {
                     color: $danger;
                 }
             }
+
+            @include tab-land {
+                top: 40%;
+                width: 80%;
+                margin-top: 10px;
+
+                .name a {
+                    font-size: 24px;
+                }
+            }
+
+            @include tab-port {
+                width: 95%;
+                top: 30%;
+
+                .name a {
+                    font-size: 24px;
+                    width: 95%;
+                }
+            }
+        }
+    }
+}
+
+.n-auth,
+.n-content {
+    color: $muted-color;
+    font-size: 14px;
+}
+
+.n-img {
+    overflow: hidden;
+}
+
+.n-content {
+    overflow: hidden;
+    word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.n-name {
+    a {
+        color: $color;
+        font-size: 20px;
+        font-weight: 700;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: $danger;
+    }
+}
+
+.title-span::after {
+    display: block;
+    margin-left: 10px;
+    content: "\35E";
+}
+
+.p-item {
+    font-size: 14px;
+    color: $muted-color;
+
+    .p-img {
+        height: 200px;
+        background-position: center center;
+        overflow: hidden;
+    }
+
+    .p-author {
+        text-align: left;
+    }
+
+    a {
+        text-decoration: none;
+        font-size: 20px;
+        line-height: 1.2;
+        font-weight: 700;
+        color: $color;
+    }
+
+    a:hover {
+        color: $danger;
+    }
+
+    .p-content {
+        overflow: hidden;
+        word-wrap: break-word;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 5;
+        width: 100%;
+        margin: 10px 0;
+    }
+}
+
+.p-list {
+    .l-img {
+        overflow: hidden;
+    }
+
+    .l-content {
+        .l-name {
+            overflow: hidden;
+            word-wrap: break-word;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            width: 100%;
+            margin: 10px 0;
+
+            a {
+                font-size: 14px;
+                font-weight: 700;
+                color: $color;
+                text-decoration: none;
+            }
+
+            a:hover {
+                color: $danger;
+            }
+        }
+
+        .date {
+            font-size: 14px;
+            color: $muted-color;
         }
     }
 }
